# ai_knowledge_base

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 22e095480826_init_all_table.py  5e6cea237e62_init_table.py  f880236ec7c3_init.py
app/: main.py
app/api/routers/: documents.py
app/core/: celery_app.py  config.py
app/db/: base.py  session.py
app/models/: __init__.py  chunk.py  document.py  embedding.py  user.py
app/repositories/: chunk_repository.py  document_repository.py
app/schemas/: ask.py  document.py
app/services/: chunk_service.py  document_service.py
app/tasks/: document_tasks.py
docker/: celery.Dockerfile
