[project]
name = "ai_knowledge_base"
version = "0.1.0"
description = "API для Q&A по технической документации с использованием LLM (RAG — Retrieval-Augmented Generation)."
readme = "README.md"
requires-python = ">=3.12"

authors = [
{ name = "Данил Богатов", email = "[danil.boghatov17@yandex.ru](mailto:danil.boghatov17@yandex.ru)" }
]

license = { text = "MIT" }

dependencies = [
"fastapi>=0.135.1",
"uvicorn>=0.41.0",
"pydantic-settings>=2.0.0",
"python-dotenv>=1.0.0",
"sqlalchemy>=2.0.0",
"asyncpg>=0.29.0",
"alembic>=1.13.0",
"pgvector>=0.4.2",
"httpx>=0.27.0",
"celery>=5.4.0",
"redis>=5.0.0",
"openai>=1.30.0",
"tenacity>=8.2.3",
"orjson>=3.10.0"
]

[dependency-groups]
dev = [
"mypy>=1.19.1",
"pre-commit>=4.5.1",
"ruff>=0.15.4"
]

test = [
"pytest>=8.3.4",
"pytest-cov>=6.0.0",
"pytest-asyncio>=0.25.2",
"httpx>=0.27.0"
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
